# indice-delictivo-hermosillo

./: .gitignore  Makefile  PCA.py  README.md  REPORTE_UNIFICACION_v3.1.md  REPORTE_UNIFICACION_v4.0.md  SECURITY.md  credentials.json  indice_delictivo_hermosillo_main.py  investigacion_poligonos.txt  pyproject.toml  regenerar_mapa.ps1  requirements.txt  run_pipeline.ps1
data/: README.md
docs/: CAMBIO_FUENTE_POLIGONOS.md  DICCIONARIO_DE_DATOS.md  GIT_DATA_MANAGEMENT.md  METODOLOGIA_PCA.md  PIPELINE_DASHBOARD.md  PROCESO_LIMPIEZA_DATOS.md  RESUMEN_EJECUTIVO.md  mkdocs.yml
notebooks/: 01_auto_eda_SweetViz.ipynb  01_auto_eda_ydata.ipynb  02_analisis_exploratorio.ipynb  03_analisis_pca_y_generacion_indices.ipynb  1.0-eot-eda-poligonos_unificados_completo.ipynb  Demografia_Colonias.ipynb  Limpieza_Colonias.ipynb  analizar_calidad_datos_demografia.py  coloniasHermosillo.ipynb  colonias_poligonos.ipynb  colonias_poligonos.py  corregirColonias.ipynb  dashboard_mapa_interactivo.py  diagnostico_demografia_poligonos.py  diagnostico_incidentes_sin_coordenadas.py  diagnostico_poligonos_sin_demografia.py  diagnostico_poligonos_sin_incidentes.py  download_raw_data.py  explorar_shapefiles.py  extraer_colonias_unicas_reportes_911.py  geocodificar_colonias_demografia.py  geocodificar_colonias_reportes_911.py  investigar_diferencia_poligonos.py  limpieza_colonias.py  make_interim_data.py  mapa_dinamico_filtros.py  mapa_dinamico_folium.py  mapa_folium_interactivo.py  mapa_interactivo_folium_avanzado.py  normalizar_espacios_demografia.py  poblacionColonias.ipynb  script_demografia.py  (+3 more)
(+28 files in other folders)
