[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "indice-delictivo-hermosillo"
version = "0.0.1"
description = "analisis de los reportes a los servicios de emergencia en hermosillo por colonia"
authors = [
  { name = "equipo 5" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["indice-delictivo-hermosillo"]
include = ["pyproject.toml", "indice-delictivo-hermosillo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["indice-delictivo-hermosillo"]
force-sort-within-sections = true

